# FreeNIC

./: .env.example  .gitignore  CITATION.cff  DATA_LICENSE.md  LICENSE  README.md  SELF_HOSTING.md  serve_freenic.py
Inputs/: README.md
Outputs/: COVERAGE_GAPS.md  DATA_DICTIONARY.md  DATA_SOURCE_INVENTORY.md  QUICK_START.md
Outputs/freenic_py/: LICENSE  README.md  pyproject.toml
Outputs/freenic_py/src/freenic/: __init__.py  _core.py  _tables.py  accessors.py
Outputs/freenic_py/tests/: test_accessors.py  test_core.py
Outputs/freenic_r/: DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE
Technical/: BEST_PRACTICES.md  HDARP_MASTER_CATALOG.csv  PROGRESS_LOG.md  REVIEW_DATA_QUALITY_AUDIT.md
Technical/Handoffs/: HANDOFF_2026-05-25_robert_pdf_sync.md  HANDOFF_20260323_230000.md  HANDOFF_20260324_170000.md  HANDOFF_20260325_010000.md  HANDOFF_20260331_020000.md
Technical/freenic_ingestion/: INGESTION_LOG.md
Technical/freenic_mcp/: requirements.txt  server.py
data/: MANIFEST.md
pipeline/: REFRESH.md  REFRESH_STATE.json  __init__.py  requirements.txt
pipeline/reconstruction/: LICENSE_POSTURE.md  README.md  RECONSTRUCTION_SPEC.md  SPEC_CHECK.md  __init__.py  build_finhist_equivalent.py  build_luck_core.py  build_luck_equivalent.py  build_published_refs.py  divergence_reasons.csv  entity_spine.py  investigate_unexplained.py  run_gmatch.py  (+6 more)
release-tools/: README.md  build_content.py  build_slice.py  make_freenic_counts.py
site/: .dockerignore  DATA_SERVING.md  Dockerfile  docker-compose.yml  smoke_dictionary.py
tools/: check_doc_counts.py  freenic_live_counts.py
(+951 files in other folders)
