[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freenic"
version = "0.1.0"
description = "Python interface to the freenic US banking regulatory database (1.5B rows, 1863-2026)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.1.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
arrow = ["pyarrow>=14.0"]
dev = ["pytest>=7.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/freenic"]
